# a-maze-ing

./: .flake8  .gitignore  Makefile  README.md  VENV_GUIDE.md  a_maze_ing.py  config.txt  config_parser.py  generator.py  menu.py  pattern.py  pyproject.toml  renderer.py  requirements.txt  validator.py  writer.py
a_maze_ing/: __init__.py  maze.py  renderer.py  solver.py  validator.py
mazegen/: core.py  generator.py  maze.py  pattern.py  solver.py  validator.py
