[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator package for A-Maze-ing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "janrodri"},
    {name = "cvaz-alf"}
]
dependencies = []

[tool.setuptools]
packages = ["mazegen"]